remove unneeded things

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <body>
 	<header>
-		<h1>Sacred Harp Barcelona</h1>
+		<h1>Barcelona <br />Sacred Harp</h1>
 	</header>
 
 	<img src="JUSTBIRDCAUSEYOUHATEMYTYPETASTE.png" class="overflow-centered" />
@@ -132,6 +132,11 @@
 
 		<section>
 			<h2>What it sounds like</h2>
+			<ul>
+				<li>Someone picks a song, someone gives a starting note, we sing.</li>
+				<li>No money or experience needed.</li>
+				<li>Friendly, inclusive community open to all.</li>
+			</ul>
 			<iframe style="border: 0; width: 100%; height: 42px;"
 				src="https://bandcamp.com/EmbeddedPlayer/album=2865413260/size=small/bgcol=333333/linkcol=ffffff/track=2370696986/transparent=true/"
 				seamless><a
