--- a/index.html
+++ b/index.html
@@ -120,23 +120,19 @@
 		<section>
 			<h2>When &amp; Where</h2>
 			<p>
-				<a href="https://maps.app.goo.gl/h1JWXzK7eTSFmJ9F9">Thursdays, 7 - 9, MOB, Bailèn</a>
+				<a href="https://maps.app.goo.gl/VYk1UvXpMrApNtjw5">Thursdays, 7 - 9, MOB, Bailèn</a>
 			</p>
 			<ul>
 				<li>We meet in Bar Bailén at 7 and sing downstairs.
 				</li>
-				<li>Contact us here if you have any questions!</li>
-				<li>If you arrive late, contact us to let us know!</li>
+				<li><a href="https://ig.me/m/barcelonasacredharp">Contact us</a> if you have any questions!</li>
+				<li>If you arrive late, we're downstairs - <a href="https://ig.me/m/barcelonasacredharp">text us</a>!
+				</li>
 			</ul>
 		</section>
 
 		<section>
 			<h2>What it sounds like</h2>
-			<ul>
-				<li>Someone picks a song, someone gives a starting note, we sing.</li>
-				<li>No money or experience needed.</li>
-				<li>Friendly, inclusive community open to all.</li>
-			</ul>
 			<iframe style="border: 0; width: 100%; height: 42px;"
 				src="https://bandcamp.com/EmbeddedPlayer/album=2865413260/size=small/bgcol=333333/linkcol=ffffff/track=2370696986/transparent=true/"
 				seamless><a
