update mob details and add contact section

--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
 				<a href="https://maps.app.goo.gl/VYk1UvXpMrApNtjw5">Thursdays, 7 - 9, MOB, Bailèn</a>
 			</p>
 			<ul>
-				<li>We meet in Bar Bailén at 7 and sing downstairs.
-				</li>
-				<li><a href="https://ig.me/m/barcelonasacredharp">Contact us</a> if you have any questions!</li>
-				<li>If you arrive late, we're downstairs - <a href="https://ig.me/m/barcelonasacredharp">text us</a>!
+				<li>We sing in <a href="https://mob-barcelona.com/">MOB Bailèn</a>, a coworking space.</li>
+				<li>We meet in <a href="https://maps.app.goo.gl/VYk1UvXpMrApNtjw5">Bar Bailèn</a>, next door, and sing
+					downstairs.</li>
+				<li>If you arrive late, we're probably downstairs - <a
+						href="https://ig.me/m/barcelonasacredharp">message
+						us</a>!
 				</li>
 			</ul>
 		</section>
@@ -137,6 +139,12 @@
 				src="https://bandcamp.com/EmbeddedPlayer/album=2865413260/size=small/bgcol=333333/linkcol=ffffff/track=2370696986/transparent=true/"
 				seamless><a
 					href="https://corksacredharp.bandcamp.com/album/the-third-ireland-convention-2013-saturday" /></iframe>
+		</section>
+
+		<section>
+			<h2>I have a lot of questions</h2>
+			<p>Fair. <a href="https://ig.me/m/barcelonasacredharp">Contact us</a>
+			</p>
 		</section>
 	</section>
 </body>
