--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Sacred Harp Barcelona</title>
+	<meta name="referrer" content="strict-origin-when-cross-origin" />
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -136,10 +137,8 @@
 
 		<section>
 			<h2>What it sounds like</h2>
-			<iframe style="border: 0; width: 100%; height: 42px;"
-				src="https://bandcamp.com/EmbeddedPlayer/album=2865413260/size=small/bgcol=333333/linkcol=ffffff/track=2370696986/transparent=true/"
-				seamless><a
-					href="https://corksacredharp.bandcamp.com/album/the-third-ireland-convention-2013-saturday" /></iframe>
+			<iframe style="width: 100%; aspect-ratio: 16/9; border: 0;" src="https://www.youtube-nocookie.com/embed/_q_9g1B9zcs"
+				referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</section>
 
 		<section>
