--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500;600&display=swap" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Faculty+Glyphic&family=MedievalSharp&display=swap"
+		rel="stylesheet">
 	<style>
 		* {
 			box-sizing: border-box;
@@ -20,11 +25,12 @@
 		}
 
 		body {
-			font-family: "Cormorant Garamond", Georgia, serif;
+			font-family: "MedievalSharp", cursive;
 			line-height: 1.8;
-			color: #e8e0d5;
-			background: #243530;
+			color: #097d4c;
+			background: #f1ead0;
 			max-width: 580px;
+			font-weight: 900;
 			margin: 0 auto;
 			min-height: 100vh;
 			letter-spacing: 0.01em;
@@ -36,14 +42,14 @@
 		}
 
 		h1 {
-			font-family: "EB Garamond", Georgia, serif;
+			font-family: "MedievalSharp", cursive;
 			font-size: 2.6rem;
-			font-weight: 500;
+			font-weight: 900;
 			line-height: 1.1;
 			text-transform: uppercase;
 			margin-bottom: 0.5rem;
 			margin-top: 0.5rem;
-			color: #f4b87a;
+			color: #097d4c;
 		}
 
 		section {
@@ -55,11 +61,11 @@
 		}
 
 		h2 {
-			font-size: 0.9rem;
+			font-size: 1.2rem;
 			font-weight: 600;
 			letter-spacing: 0.15em;
 			text-transform: uppercase;
-			color: #f4b87a;
+			color: #097d4c;
 		}
 
 		p {
@@ -73,10 +79,11 @@
 		}
 
 		a {
-			color: #f4ece3;
+			color: #097d4c;
 			text-decoration: none;
 			border-bottom: 1px solid rgba(244, 236, 227, 0.25);
 			transition: border-color 0.3s ease;
+			text-decoration: underline;
 		}
 
 		a:hover {
@@ -104,20 +111,25 @@
 
 <body>
 	<header>
-		<h1>Barcelona <br />Sacred Harp</h1>
+		<h1>Barcelona <br />Shape Note Singing</h1>
 	</header>
 
-	<img src="JUSTBIRDCAUSEYOUHATEMYTYPETASTE.png" class="overflow-centered" />
+	<img src="JUSTGREENBIRDCAUSEYOUHATEMYTYPETASTE.png" class="overflow-centered" />
 
 	<section id="section-after-logo">
 		<h2>What it is</h2>
-		<p>Community folk-singing of traditional music.</p>
-		<ul>
-			<li>No auditions, rehearsals or performances.</li>
-			<li>No money or experience needed.</li>
-			<li>Friendly, inclusive community open to all.</li>
-		</ul>
-		<p>We show up, we sing, we hang out. That's it.</p>
+		<p>Have you always wanted to sing? <b>Come sing with us.</b></p>
+		<p>Shapenote is beautiful, loud, acapella traditional folk singing. There are no performances - we just meet up,
+			sing together and hang out. You don't need any experience - you can just come along and we'll help you
+			learn.</p>
+
+		<p>Are you scared you'll be really bad? Don't worry, so is everyone. Shapenote is designed to be
+			beginner-friendly and it's a kind, inclusive community where it's fine to make tons of mistakes while you
+			learn.</p>
+		<p>If you already know how to sing, that's cool too. Shapenote is also just banger music, really fun and a great
+			community.</p>
+
+		<p>Shapenote is strictly inclusive unless you're a dick.</p>
 
 		<section>
 			<h2>When &amp; Where</h2>
@@ -137,13 +149,14 @@
 
 		<section>
 			<h2>What it sounds like</h2>
-			<iframe style="width: 100%; aspect-ratio: 16/9; border: 0;" src="https://www.youtube-nocookie.com/embed/_q_9g1B9zcs"
+			<iframe style="width: 100%; aspect-ratio: 16/9; border: 0;"
+				src="https://www.youtube-nocookie.com/embed/_q_9g1B9zcs"
 				referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</section>
 
 		<section>
 			<h2>I have a lot of questions</h2>
-			<p>Fair. <a href="https://ig.me/m/barcelonasacredharp">Contact us</a>
+			<p>I'm not surprised. <a href="https://ig.me/m/barcelonasacredharp">Contact us</a>
 			</p>
 		</section>
 	</section>
